os/bluestore: refactor FreeListManager to get clearer view on the number of alloc units it tracks. This also fixes out-of-range access for fsck's used_blocks bitmap that might happen when checking stores created prior to v12.2.2 Fixes http://tracker.ceph.com/issues/22535

Signed-off-by: Igor Fedotov <ifedotov@suse.com>
(cherry picked from commit f64c236f278732b0fa211cd9e93c4f9d5a77a356)

Conflicts:
	src/os/bluestore/BlueStore.cc: Removed argument 'what' from apply.